syntax = "proto3";

package payment.v1;

option go_package = "payment-service/grpc/paymentpb;paymentpb";

import "google/protobuf/timestamp.proto";

enum PaymentMethod {
    UNKNOWN = 0;
    CARD = 1;
    SBP = 2;
    CREDIT_CARD = 3;
    INVESTOR_MONEY = 4;
}

message PayOrderRequest {
    string order_uuid = 1;
    string user_uuid = 2;
    PaymentMethod payment_method = 3;
}

message PayOrderResponse {
   string transaction_uuid = 1;
}

service PaymentService {
    rpc PayOrder(PayOrderRequest) returns (PayOrderResponse);
}